<resources>
    <string name="app_name">SeriesCalendar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginhere">login here</string>
    <string name="sign_up">sign up</string>
    <string name="email">email</string>
    <string name="sign_up2">Sign Up</string>
    <string name="create_new_account">Create new account</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_series">Series</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_serie">Nueva serie</string>
    <string name="nombre">Nombre</string>
    <string name="plataforma">Plataforma</string>
    <string name="descripcion">Descripcion</string>
    <string name="a_adir_serie">Añadir Serie</string>
    <string name="volver_a_series">Volver a series</string>
    <string name="nombre_de_la_serie">Nombre de la serie:</string>
    <string name="descripcion_de_la_serie">Descripcion de la serie:</string>
    <string name="a_adir_temporada">Añadir temporada</string>
    <string name="plataforma_de_la_serie">Plataforma donde visualizar la serie:</string>
    <string name="nombre_de_temporada">Nombre de temporada</string>
    <string name="numero_de_capitulo">Numero de capitulo</string>
    <string name="nombre_del_capitulo">Nombre del capitulo</string>
    <string name="fecha_de_estreno">Fecha de estreno</string>
    <string name="a_adir_capitulo">Añadir capitulo</string>
    <string name="a_adir_a_favoritos">Añadir a favoritos</string>
</resources>